# Chunimai_dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
ai_service/: agent.py  main.py  pyproject.toml  rating.py
ai_service/tests/: test_suggest_songs.py
ai_service/tools/: query_play_data.py  suggest_songs.py
src/: index.ts
