[project]
name = "ai_service"
version = "0.1.0"
description = "AI chat service for Chunimai dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langserve>=0.3",
    "langchain-openai>=1.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.32.5",
]
